# TinyHLS

./: .gitignore  CMakeLists.txt
case/: dependenceTest.cpp  test.sh  testCase.cpp
cmake/modules/: AddTinyHLS.cmake
include/tinyhls/Basic/: LLVM.h  Version.h  Version.inc.in
include/tinyhls/Passes/: DependenceList.h  FindFunction.h  HI_FindFunction.h  LoopInformationCollect.h  SimpleTimingEvaluation.h
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  Version.cpp
lib/Passes/: CMakeLists.txt  CountIR.cpp  DependenceList.cpp  FindFunction.cpp  HI_FindFunction.cc  LoopInformationCollect.cpp  SimpleTimingEvaluation.cpp  SimpleTimingEvaluationBlockLatency.cpp  SimpleTimingEvaluationFunctionLatency.cpp  SimpleTimingEvaluationLoopLatency.cpp
lib/Utils/: CMakeLists.txt  HI_print.cc
test/: CMakeLists.txt
test/BasicTest/: CMakeLists.txt  Driver.cpp
test/DependenceList/: CMakeLists.txt  TestDependence.cpp
test/FindFunction/: CMakeLists.txt  LLVM_exp0_find_functions.cc  TestFindFunctions.cpp
test/LoopInformationTest/: CMakeLists.txt  LoopInformationTest.cpp
test/SimpleTimingEvaluationTest/: CMakeLists.txt  SimpleTimingEvaluationTest.cpp
